--- a/css/team.css
+++ b/css/team.css
@@ -5,6 +5,10 @@ body {
 	background-size: cover;
 	font-family: 'Lato', Arial, sans-serif;
 	color: #fff;
+	overflow: visible;
+	min-height: 100vh;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
 .wrapper {
