--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -1,3 +1,10 @@
 img {
-    margin: 10px;
+    margin: 15px;
+}
+.smenu{
+text-decoration: none;
+    line-height: normal;
+}
+.mainmenu__item:hover {
+    text-decoration: none;
 }
