Made overall changes to Site for upload
Added Sponsors,Team,Made some css changes to make the site ready for deplyoment

--- a/css/main_form.css
+++ b/css/main_form.css
@@ -51,7 +51,8 @@ a {
 	font-family: Poppins-Regular;
 	font-size: 14px;
 	line-height: normal;
-	color: #666666;
+  color: var(--color-link);
+
 	margin: 0px;
 	transition: all 0.4s;
 	-webkit-transition: all 0.4s;
